--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,11 @@
 <div class="container">
   <app-profil></app-profil>
   <app-profil></app-profil>
+  <app-button></app-button>
+</div>
+
+<div class="window">
+  <app-window></app-window>
 </div>
 
 <router-outlet></router-outlet>
