--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <app-header></app-header>
 
 <div class="container">
-  <app-profil></app-profil>
-  <app-profil></app-profil>
-  <app-button></app-button>
+  <app-buttonraster></app-buttonraster>
 </div>
 
 <div class="window">
