--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,4 +1,4 @@
 <div class="button">
-    <img src="assets/image/wasser.png ">
+    <button (mouseenter)="sendData()"><img src='assets/image/wasser.png ' draggable="false" ></button>
     <p style="text-align:center">{{anz}}</p> 
 </div>
