--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,4 +1,5 @@
 <div class="button">
-    <button (mouseenter)="sendData()"><img src='assets/image/wasser.png ' draggable="false" ></button>
+
+    <button (mouseenter)="sendData()"><img src={{bild}} draggable="false" ></button>
     <p style="text-align:center">{{anz}}</p> 
 </div>
