--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <app-header></app-header>
 
+
+
 <div class="container">
-  <app-buttonraster></app-buttonraster>
+  <app-profil class="item"></app-profil>
+  <app-window class="item"></app-window>
+  <app-buttonraster class="item"></app-buttonraster>
+  <app-textlog class="item"></app-textlog>
+  
 </div>
 
-<div class="window">
-  <app-window></app-window>
-</div>
+
 
 <router-outlet></router-outlet>
