--- a/src/app/buttonraster/buttonraster.component.css
+++ b/src/app/buttonraster/buttonraster.component.css
@@ -1,7 +1,12 @@
+
+.ganzes{
+ margin-top: -4vw;
+}
+
 .container{
     display: grid;
     grid-template-columns: repeat(5, 100px [col-start]);
-    
+
 }
 .item{
     width: 100px;
