--- a/src/app/textlog/textlog.component.css
+++ b/src/app/textlog/textlog.component.css
@@ -1,12 +1,10 @@
 .game {
-    min-height: 300px;
+    min-height: 10vw;
     background-color: white;
-    width: 25vw;
+    width: 50vw;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 4px;
     overflow: hidden;
     position: relative;
     margin-top: -0px;
 }
-
-
