--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,19 @@
-<app-header></app-header>
+<router-outlet></router-outlet>
 
 
+<div class="login">
 
-<div class="container">
-  <app-profil class="item"></app-profil>
-  <app-window class="item"></app-window>
-  <app-buttonraster class="item"></app-buttonraster>
-  <app-textlog class="item"></app-textlog>
-  
+  <router-outlet></router-outlet>
+
+
 </div>
 
 
 
-<router-outlet></router-outlet>
+<div class="liveGame">
+
+  <router-outlet></router-outlet>
+  
+</div>
+
+
