--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
     <img class="logo" src = "assets/image/logo.png">
+    <button><a href="">Login</a></button>
+    <button>Test 1</button>
+    <button>Test 2</button>
+    <button>Test 3</button>
 </header>
