--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,1 +1,10 @@
-<p class="game">window works!</p>
+<div class="game">
+
+
+    <app-eventbox></app-eventbox>
+    <app-eventbox></app-eventbox>
+    <app-eventbox></app-eventbox>
+
+
+
+</div>
