--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -1,12 +1,18 @@
 .game {
-    min-height: 300px;
+    height: 300px;
     background-color: white;
     width: 40vw;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 4px;
-    overflow: hidden;
+    overflow-y: scroll;
     position: relative;
+    flex-wrap: nowrap;
     margin-top: -0px;
+    scrollbar-width: none;  /* Firefox */
 }
 
+.example::-webkit-scrollbar {
+    display: none;
+  }
+  
 
