--- a/src/app/eventbox/eventbox.component.html
+++ b/src/app/eventbox/eventbox.component.html
@@ -1,5 +1,5 @@
 <div class="eventbox">
-    <img src="assets\image\schiff.png" alt="">
+    <img src="assets\image\schiffgross.png" alt="">
 
     <div class="gegner">
         <p>Käpt'n Barbossa</p>
