--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,4 +4,7 @@
     <button>Test 1</button>
     <button>Test 2</button>
     <button>Test 3</button>
+    <button>Test 4</button>
+    <button>Test 5</button>
+    <button>Test 6</button>
 </header>
