--- a/src/app/upgrade-shop/upgrade-shop.component.html
+++ b/src/app/upgrade-shop/upgrade-shop.component.html
@@ -1,21 +1,30 @@
-<div class="panel">
+<div class="bg">
 
+    <div class="knopf">
 
-    <div class="rowSchiff">
-        <img src="assets/image/schiffgross.png">
-        <label for="">Schiff Upgrade</label>
-        <label for="">100 Gold</label>
-        <button>Upgraden</button>
+   <!--    <button class="cross" (click)="schliessen()">X</button>  -->
+
+        <div class="panel">
+
+        
+            <div class="rowSchiff">
+                <img src="assets/image/schiffgross.png">
+                <label for="">Schiff Upgrade</label>
+                <label for="">100 Gold</label>
+                <button>Upgraden</button>
+
+            </div>
+
+            <div class="rowCrew">
+                <img src="assets/image/profilbild/pirateboy.png">
+                <label for="">Crew Upgrade</label>
+                <label for="">100 Gold</label>
+                <button>Upgraden</button>
+            </div>
+
+        </div>
 
     </div>
-
-    <div class="rowCrew">
-        <img src="assets/image/profilbild/pirateboy.png">
-        <label for="">Crew Upgrade</label>
-        <label for="">100 Gold</label>
-        <button>Upgraden</button>
-    </div>
-
 
 
 </div>
