--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,27 @@
 <header>
     <img class="logo" src = "assets/image/logo.png">
     <button><a href="">Login</a></button>
-    <button>Test 1</button>
-    <button>Test 2</button>
+    <button
+    (click)="isOpen = !isOpen"
+    type="button"
+    cdkOverlayOrigin
+    #trigger="cdkOverlayOrigin"> Shop</button>
     <button>Test 3</button>
     <button>Test 4</button>
     <button>Test 5</button>
     <button>Test 6</button>
+
+
+
+    <ng-template cdkConnectedOverlay cdkConnectedOverlayBackdropClass="cdk-overlay-transparent-backdrop"
+    [cdkConnectedOverlayHasBackdrop]="true" [cdkConnectedOverlayOrigin]="trigger" [cdkConnectedOverlayOpen]="isOpen"
+    (detach)="isOpen = false" (backdropClick)="isOpen = false">
+
+        <app-upgrade-shop></app-upgrade-shop>
+
+    </ng-template>
+
+
+
+
 </header>
