--- a/src/app/upgrade-shop/upgrade-shop.component.css
+++ b/src/app/upgrade-shop/upgrade-shop.component.css
@@ -1,15 +1,37 @@
-.panel{
+.bg{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.548);
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cross{
+    color: brown;
+}
+
+.knopf{
     min-height: 300px;
     background-color: white;
     width: 600px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 4px;
     overflow: hidden;
-    position: relative;
+    justify-content: center;
+    align-items: end;
+}
+
+.panel{
+    margin-left: auto;
+    margin-right: auto;
+
     display: flex;
     flex-flow: row;
     justify-content: space-evenly;
     align-items: center;
+
 
 
 }
