--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
     <button>Registrieren</button>
     </div>
 
-    <button><a href="livegame">Login umgehen</a></button>
+    <a routerLink="/livegame" routerLinkActive="active"> <button>Login umgehen</button></a>
 </div>
 
 
