--- a/src/app/buttonraster/buttonraster.component.html
+++ b/src/app/buttonraster/buttonraster.component.html
@@ -6,37 +6,8 @@
 
 <div class="container">
 
-   <app-button (dataEvent)="handleData($event)" class="item" id="b1"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b2"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b3"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b4"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b5"></app-button>
-
-   <app-button (dataEvent)="handleData($event)" class="item" id="b6"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b7"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b8"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b9"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b10"></app-button>
-
-   <app-button (dataEvent)="handleData($event)" class="item" id="b11"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b12"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b13"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b14"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b15"></app-button>
-
-   <app-button (dataEvent)="handleData($event)" class="item" id="b16"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b17"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b18"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b19"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b20"></app-button>
-
-   <app-button (dataEvent)="handleData($event)" class="item" id="b21"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b22"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b23"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b24"></app-button>
-   <app-button (dataEvent)="handleData($event)" class="item" id="b25"></app-button>
-  
-    
+    <app-button *ngFor="let button of buttons" [anz]="gibAnz(button.id)" [bild]="gibBild(button.id)" (click)="bewegen(button.id)" (dataEvent)="handleData($event, button.id - 1)" (leerEvent)="leeren($event)" class="item" [id]="'b' + button.id"></app-button>
   </div>
+  
 
 </div>
