--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     type="button"
     cdkOverlayOrigin
     #trigger="cdkOverlayOrigin"> Shop</button>
-    <button>Test 3</button>
+    <button (click)="textlogAdd()">TextLog</button>
     <button>Test 4</button>
     <button>Test 5</button>
     <button>Test 6</button>
