--- a/src/app/textlog/textlog.component.html
+++ b/src/app/textlog/textlog.component.html
@@ -1,19 +1,12 @@
 
 <div class="game">
 
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezw++++++++++++++++++++++++++++++++++++++++++++++++++</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Ja'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] Käpt'n Jake hat Käpt'n Barbossa bezwungen!</label><br>
-<label>[23:25:12] K-------------------------------------------------------------en!</label><br>
+<label>{{text}}</label>
+
+
+    <li *ngFor="let text of text">{{text}}</li>
+  
+
 
 
 </div>
