--- a/src/app/eventbox/eventbox.component.html
+++ b/src/app/eventbox/eventbox.component.html
@@ -1,10 +1,10 @@
 <div class="eventbox">
-    <img src="assets\image\schiffgross.png" alt="">
+    <img src={{eventPic}} alt="">
 
     <div class="gegner">
-        <p>Käpt'n Barbossa</p>
-        <p>Kampfkraft: 9001</p>
+        <p>{{name}}</p>
+        <p>{{zweiteoption}}</p>
     </div>
-        <button>Angriff</button>
+  <button>{{angriffpluendernshop}}</button>
 
 </div>
