--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,10 +1,11 @@
 <div class="game">
 
 
-    <app-eventbox></app-eventbox>
-    <app-eventbox></app-eventbox>
-    <app-eventbox></app-eventbox>
 
+    <button (click)="createChildren()">Create Children</button>
+  <div *ngFor="let child of children; let i = index">
+    <app-eventbox [name]="child.name" [zweiteoption]="child.zwei" [eventPic]="child.eventPic" [angriffpluendernshop]="child.angriffpluendernshop" ></app-eventbox>
+  </div>
 
 
 </div>
