--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
 
     <div class="knopfe">
     <button>Anmelden</button>
-    <button>Registrieren</button>
+    <button routerLink="/registrieren" routerLinkActive="active">Registrieren</button>
     </div>
 
     <a routerLink="/livegame" routerLinkActive="active"> <button>Login umgehen</button></a>
