--- a/src/app/livegame/livegame.component.html
+++ b/src/app/livegame/livegame.component.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="dreierBlock">
           <div class="profWinBlock">
-            <app-profil class="item"></app-profil>
+            <app-profil [id]="gibId()" class="item"></app-profil>
             <app-window class="item"></app-window>
           </div>
 
