--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -1,6 +1,7 @@
 <div class="profil">
     <img src="assets/image/profilbild/pirateboy.png">
-    <p style="text-align:center">Captain Jake</p>
+    <p style="text-align:center">{{schiffname}}</p>
+    <p style="text-align:center">{{name}}</p>
     <p style="text-align:center">Gold: {{ gold }}<br>Kampfkraft: {{ kampfkraft }}</p>
 
 
