--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <img class="logo" src = "assets/image/logo.png">
-    <button><a href="">Login</a></button>
+    <button><a href="">Logout</a></button>
     <button
     (click)="isOpen = !isOpen"
     type="button"
