--- a/src/app/registrieren/registrieren.component.css
+++ b/src/app/registrieren/registrieren.component.css
@@ -43,12 +43,13 @@ input{
 }
 .titel{
     align-self: center;
+    margin-left: 200px;
 }
 
 
 .backgroundPic{
     height: 130%;
-    margin-left: -30vw;
+    margin-left: -850px;
     margin-top: auto;
     opacity: 40%;
 }
