--- a/src/app/upgrade-shop/upgrade-shop.component.html
+++ b/src/app/upgrade-shop/upgrade-shop.component.html
@@ -11,7 +11,7 @@
                 <img src="assets/image/schiffgross.png">
                 <label for="">Schiff Upgrade</label>
                 <label for="">100 Gold</label>
-                <button>Upgraden</button>
+                <button (click)="upgradeSchiff()">Upgraden</button>
 
             </div>
 
@@ -19,7 +19,7 @@
                 <img src="assets/image/profilbild/pirateboy.png">
                 <label for="">Crew Upgrade</label>
                 <label for="">100 Gold</label>
-                <button>Upgraden</button>
+                <button (click)="upgradeCrew()">Upgraden</button>
             </div>
 
         </div>
