--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
             <button routerLink="/registrieren" routerLinkActive="active">Registrieren</button>
             </div>
         
-            <a routerLink="/livegame" routerLinkActive="active"> <button>Login umgehen</button></a>
+       <!--     <a routerLink="/livegame" routerLinkActive="active"> <button>Login umgehen</button></a>-->
 
       </form>
       
