--- a/src/app/registrieren/registrieren.component.css
+++ b/src/app/registrieren/registrieren.component.css
@@ -15,6 +15,7 @@
 }
 
 button{
+    margin-top: 3vw;
     margin-left: 15px;
     margin-bottom: 5px;
 
@@ -43,13 +44,12 @@ input{
 }
 .titel{
     align-self: center;
-    margin-left: 200px;
 }
 
 
 .backgroundPic{
     height: 130%;
-    margin-left: -850px;
+    margin-left: -30vw;
     margin-top: auto;
     opacity: 40%;
 }
