--- a/src/app/registrieren/registrieren.component.html
+++ b/src/app/registrieren/registrieren.component.html
@@ -25,8 +25,16 @@
         <button routerLink="/" routerLinkActive="active">Zurück</button>
       </div>
 
-      <a routerLink="/livegame" routerLinkActive="active"><button>Login umgehen</button></a>
 
     </form>
     </div>
+
+</div>
+
+    <div class="titel">
+      <h1>PirateGame</h1>
+  </div>
+  
+
+
 </div>
