--- a/src/app/profil/profil.component.html
+++ b/src/app/profil/profil.component.html
@@ -3,6 +3,6 @@
     <p style="text-align:center">{{schiffname}}</p>
     <p style="text-align:center">{{name}}</p>
     <p style="text-align:center">Gold: {{ gold }}<br>Kampfkraft: {{ kampfkraft }}</p>
-
+    <button (click)="delete(id)">Profil löschen</button>
 
 </div>
