--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,8 +1,9 @@
 <div class="game">
 
 
-  <h1>Eventlog</h1>
-  <button (click)="createChildren()">Create Children</button>
+
+    <button (click)="createChildren('Kaptn Barbossa','Kampfkraft: 600 ','assets/image/schiffgross.png','Angriff')">Create Children</button>
+
   <div *ngFor="let child of children; let i = index">
     <app-eventbox [name]="child.name" [zweiteoption]="child.zwei" [eventPic]="child.eventPic" [angriffpluendernshop]="child.angriffpluendernshop" ></app-eventbox>
   </div>
