--- a/src/app/livegame/livegame.component.html
+++ b/src/app/livegame/livegame.component.html
@@ -16,7 +16,7 @@
       </div>
 
 
-        <app-buttonraster class="item"></app-buttonraster>
+        <app-buttonraster [id2]="gibId()" class="item"></app-buttonraster>
 
         
     </div>
