--- a/src/app/upgrade-shop/upgrade-shop.component.html
+++ b/src/app/upgrade-shop/upgrade-shop.component.html
@@ -21,8 +21,9 @@
                 <label for="">100 Gold</label>
                 <button (click)="upgradeCrew()">Upgraden</button>
             </div>
-
+            
         </div>
+        <p>ESC zum Schließen</p>
 
     </div>
 
