--- a/src/app/upgrade-shop/upgrade-shop.component.css
+++ b/src/app/upgrade-shop/upgrade-shop.component.css
@@ -20,9 +20,12 @@
     border-radius: 4px;
     overflow: hidden;
     justify-content: center;
-    align-items: end;
+    align-items: center;
 }
-
+.knopf p {
+    margin-top: 50px;
+    margin-left: 240px;
+}
 .panel{
     margin-left: auto;
     margin-right: auto;
@@ -31,10 +34,8 @@
     flex-flow: row;
     justify-content: space-evenly;
     align-items: center;
-
-
-
 }
+
 label{
     margin: 5px;
     align-self: center;
